# avinash-ai-poc

./: README.md
Documents/: AI AGENTS AND TYPES.docx  GithubCopilot.docx
FastAPI_MultiLLM/: README.md  requirements.txt
FastAPI_MultiLLM/app/: main.py
FastAPI_MultiLLM/app/api/: routes.py
FastAPI_MultiLLM/app/core/: clients.py  config.py
FastAPI_MultiLLM/app/llms/: registry.py
FastAPI_MultiLLM/app/models/: schemas.py
FastAPI_MultiLLM/app/services/: llm_service.py
LangGraphLangSmithPOC/: .gitignore  langgraph_llm.py  langgraph_simple_poc.py
mcpLangchain/: .gitignore  README.md  client.py  mathserver.py  pyproject.toml  weather.py
mcp_client/: .gitignore  client.py
mcp_server/: .gitignore  pyproject.toml
rag-pdf/: .env  .gitignore  README.md  requirements.txt
rag-pdf/scripts/: run_rag.py
rag-pdf/src/: app.py
rag-pdf/src/config/: settings.py
rag-pdf/src/embeddings/: embedder.py
rag-pdf/src/ingestion/: chunker.py  pdf_loader.py
rag-pdf/src/llm/: ollama_client.py
rag-pdf/src/rag/: pipeline.py
rag-pdf/src/retrieval/: semantic_search.py
rag-pdf/src/vectorstore/: faiss_index.py
